# qsticky

./: .gitignore  PKGBUILD  README.md  __init__.py  data.py  notes.py  preferences.py  pyproject.toml  qsticky.desktop  qsticky.py  resources.py
resources/: qsticky_pl.qm  qsticky_pl.ts  resources.qrc
src/qsticky/: __init__.py  __main__.py  data.py  notes.py  preferences.py  qsticky.py  resources.py
src/qsticky/data/: __init__.py  abstract.py  mysql.py  psql.py  sqlite.py
