[project]
name = "qsticky"
version = "1.1"
description = "A sticky desktop notes."
authors = [
    { name="Feasuro", email="feasuro@pm.me" },
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "PyQt6>=6.7.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.gui-scripts]
qsticky = "qsticky.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.urls]
Homepage = "https://github.com/Feasuro/qsticky"
Issues = "https://github.com/Feasuro/qsticky/issues"
